--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,47 @@
+
 body {
-  background: blanchedalmond;
+  background: snow;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.container {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 2em;
+}
+
+.container > div {
+  flex-grow: 1;
+  border: 1px solid gray;
+  background-color: rgb(204, 204, 204);
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div.b {
+  flex-grow:3;
+}
+
+@media only screen and (min-width:600px) { 
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+    div.a {
+      flex:1 1 100%;
+      height: 25vh;
+    }
+    div.b, div.c {
+      height: 65vh;
+    }
+ 
+ 
 }
