--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,49 @@
 body {
-  background: papayawhip;
+  background: snow;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.container {
+  padding: 2em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  gap: 2em;
+}
+
+.container>div {
+  flex-grow: 1;
+  border: 1px solid gray;
+  background-color: rgb(204, 204, 204);
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div.a {
+  width:100%;
+}
+
+div.b {
+  flex-grow:3;
+  width: 100%;
+}
+
+div.c, div.d, div.e {
+
+}
+
+
+div.f {
+  width: 100%;
+}
+
+@media screen and (min-width:600px) {
+
 }
